Closed
Bug 1392583
Opened 8 years ago
Closed 8 years ago
Crash on Android when requesting audio gUM with agc:true
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | verified |
| firefox57 | --- | fixed |
People
(Reporter: pehrsons, Assigned: dminor)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
padenot
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is
report bp-766b43b7-f798-477c-8dd1-dc3b40170816.
=============================================================
This crash reproduces consistently on Android (I have a Sony Xperia Z5) with https://codepen.io/brainshave/pen/JyOeYg.
Seems triggered by requesting agc for the audio capture.
| Assignee | ||
Comment 1•8 years ago
|
||
I'm thinking that rather than:
FATAL() << "Should never be called";
it would be sufficient to just log the function call and return an error code like many of the other functions in media/webrtc/trunk/webrtc/modules/audio_device/android/audio_device_template.h do.
Assignee: nobody → dminor
Status: NEW → ASSIGNED
| Comment hidden (mozreview-request) |
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8899851 [details]
Bug 1392583 - Remove calls to FATAL() from audio_device_template.h for unimplemented functions;
https://reviewboard.mozilla.org/r/171176/#review176322
Can you please nominate for uplift when landed?
Attachment #8899851 -
Flags: review?(padenot) → review+
Pushed by dminor@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4025523b22a3
Remove calls to FATAL() from audio_device_template.h for unimplemented functions; r=padenot
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8899851 [details]
Bug 1392583 - Remove calls to FATAL() from audio_device_template.h for unimplemented functions;
Approval Request Comment
[Feature/Bug causing the regression]:
Most likely the webrtc.org update in Bug 1341285, although similar code could have existed before.
[User impact if declined]:
Crashes when attempting to make a WebRTC call with AGC enabled on Android.
[Is this code covered by automated tests?]:
No, we only run a subset of tests on Android due to reliability problems on the test devices.
[Has the fix been verified in Nightly?]:
Yes.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
None.
[Is the change risky?]:
No.
[Why is the change risky/not risky?]:
The changes the behaviour for calling an unimplemented function from crashing to logging the function call and returning an error code.
[String changes made/needed]:
None.
Attachment #8899851 -
Flags: approval-mozilla-beta?
Comment 7•8 years ago
|
||
Comment on attachment 8899851 [details]
Bug 1392583 - Remove calls to FATAL() from audio_device_template.h for unimplemented functions;
Crash fix for WebRTC, let's take it for beta 6.
Andreas, would you mind verifying this on beta, once beta 6 is out (after Friday)?
Flags: needinfo?(apehrson)
Attachment #8899851 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•8 years ago
|
||
| bugherder uplift | ||
status-firefox56:
--- → fixed
Comment 9•8 years ago
|
||
There isn't a Fennec b6, so verification will need to wait until after next week's b7 build is created.
status-firefox55:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Version: unspecified → 56 Branch
| Reporter | ||
Comment 10•8 years ago
|
||
Verified working on b7 with the codepen in comment 0.
Flags: needinfo?(apehrson)
You need to log in
before you can comment on or make changes to this bug.
Description
•