Bug 1392583 - Remove calls to FATAL() from audio_device_template.h for unimplemented functions; r=padenot

This removes calls to FATAL() and replaces them with LOG() statements. The
unimplemented functions already returned error codes.

MozReview-Commit-ID: KgXVCIKWoLp